[package]
name = "quip"
version = "0.1.0"
edition = "2021"


[dependencies]
derivative = "2.2.0"
enum-kinds = "0.5.1"
lazy_static = "1.4.0"
logos = "0.13.0"
parser = { path = "crates/parser" }
interpreter = { path = "crates/interpreter" }

[workspace]
members = [
    "crates/parser",
    "crates/parser/parser_core",
    "crates/proc_macros",
    "crates/interpreter",
    "crates/ast",
    "."
]