[package]
name = "quip"
version = "0.1.0"
edition = "2021"


[dependencies]
derivative = "2.2.0"
lazy_static = "1.4.0"
parser = { path = "crates/parser" }
pretty_assertions = "1.4.0"

[workspace]
members = [
    "crates/parser",
    "crates/printer",
    "crates/parser/parser_core",
    "crates/proc_macros",
    "crates/fst",
    "crates/format",
    "crates/scripts",
    ".",
    "crates/things",
]


[profile.release]
lto = "fat"
opt-level = 3
debug = true
debug-assertions = true

[profile.dev]
lto = "off"
opt-level = 0
debug = true


[features]
parser_log = ["parser/log"]
