[package]
name = "fst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num = "0.4.0"
lazy_static = "1.4.0"
pad = "0.1.6"
oom = "0.3.0"
thiserror = "1.0.40"
enum-kinds = "0.5.1"
vec1 = "1.12.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
