[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num = "0.4.0"
lazy_static = "1.4.0"
pad = "0.1.6"
logos = "0.13.0"
oom = "0.3.0"
thiserror = "1.0.40"
enum-kinds = "0.5.1"
parser-core = { path = "./parser_core" }
ast = { path = "../ast" }
lexer = { path = "../lexer" }

[dev-dependencies]
pretty_assertions = "1.3.0"
