[package]
name = "quip-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num = "0.4.0"
nom = "7.1.1"
nom_locate = "4.0.0"
lazy_static = "1.4.0"
pad = "0.1.6"
logos = "0.12.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
